Forge Beta: 2-14-2015 ver 1.5.35


14514 cards in total.


-------------
Release Notes
-------------

- Net Decks support -
On the Constructed screen, you can now select a new Net Decks category from the drop down.
Contains all decks from gos's Forge Decks subforums, broken up by the column/event they were taken from.
Won't cause startup to be slower since they are loaded on the fly.


------------
Known Issues
------------

- Fate Reforged cards -
Forge now includes many of the new CFate Reforged cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- Commander 2014 cards -
Forge now includes many of the new Commander 2014 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- New Khans of Tarkir cards -
Forge now includes many of the new Khans of Tarkir cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.

- Continued Work on Conspiracy -